--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.0",
-    "@docusaurus/preset-classic": "^2.0.0-beta.0",
+    "@docusaurus/core": "2.0.0-beta.2",
+    "@docusaurus/preset-classic": "2.0.0-beta.2",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "hast-util-is-element": "1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-youtube": "^7.13.1"
+    "react-youtube": "^7.13.1",
+    "rehype-katex": "4",
+    "remark-math": "3"
   },
   "browserslist": {
     "production": [
