--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-youtube": "^7.13.1"
   },
   "browserslist": {
     "production": [
