--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.0.0-beta.4",
+    "@docusaurus/plugin-google-analytics": "^2.0.0-beta.4",
     "@docusaurus/preset-classic": "2.0.0-beta.4",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
