--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "typedoc": "0.21.2",
     "typedoc-plugin-markdown": "^3.10.4",
     "typedoc-plugin-sourcefile-link": "^1.0.3",
-    "typescript": "4.0.0"
+    "typescript": "^4.0.0"
   }
 }
