--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,7 @@ jobs:
   build_monorepo:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: git remote add -f celo-monorepo https://github.com/celo-org/celo-monorepo.git
       - name: Get latest celo-monorepo
         run: git pull -s subtree celo-monorepo master
