build monorepo w/ node v12

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,6 +12,11 @@ on:
 jobs:
   build_monorepo:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [12.x]
+    
     steps:
       - uses: actions/checkout@v2
 #       - run: git config pull.rebase true 
