--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,10 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
 #       - run: git config pull.rebase true 
 #       - run: git config --local user.email "$(git log --format='%ae' HEAD^!)"
 #       - run: git config --local user.name "$(git log --format='%an' HEAD^!)"
