--- a/celo-monorepo/packages/sdk/contractkit/tsconfig.json
+++ b/celo-monorepo/packages/sdk/contractkit/tsconfig.json
@@ -6,5 +6,11 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*", "types/**/*"],
-  "references": [{ "path": "../utils" }]
+  "references": [{ "path": "../utils" }],
+  "typedocOptions": {
+    "exclude": ["**/generated/*.ts", "**/*+(index|.test).ts"],
+    "excludePrivate": true,
+    "excludeProtected": true,
+    "hideGenerator": "true"
+  }
 }
