--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
-    "build-monorepo": "cd celo-monorepo && yarn && yarn build",
+    "build": "yarn build-monorepo && docusaurus build",
+    "build-monorepo": "cd celo-monorepo && yarn && yarn build --ignore docs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -49,6 +49,6 @@
     "typedoc": "0.21.2",
     "typedoc-plugin-markdown": "^3.10.4",
     "typedoc-plugin-sourcefile-link": "^1.0.3",
-    "typescript": "^4.0.0"
+    "typescript": "4.0.8"
   }
 }
