--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.6",
     "@docusaurus/plugin-google-analytics": "^2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
+    "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
     "hast-util-is-element": "1.1.0",
