--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
+    "docusaurus-plugin-fathom": "^1.1.0",
     "hast-util-is-element": "1.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
