--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "crowdin": "crowdin"
   },
   "dependencies": {
-    "@crowdin/cli": "3",
+    "@crowdin/cli": "^3.7.0",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
