update credentials for enterprise version

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,9 @@
-project_id: '478619'
+# project_id: '478619'
+project_id: '9'
 preserve_hierarchy: true
-api_token_env: "CROWDIN_PERSONAL_TOKEN"
+# api_token_env: "CROWDIN_PERSONAL_TOKEN"
+api_token_env: "ENT_CROWDIN_PERSONAL_TOKEN"
+base_url: "https://celo.crowdin.com"
 files: [
     # JSON translation files
     {
