--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "docusaurus build",
+    "build": "yarn crowdin:sync && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "crowdin": "crowdin",
+    "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download"
   },
   "dependencies": {
+    "@crowdin/cli": "^3.7.0",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
