--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.6",
     "@docusaurus/preset-classic": "2.0.0-beta.6",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.6",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
     "clsx": "^1.1.1",
