--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@docusaurus/preset-classic": "2.0.0-beta.6",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
+    "@mui/material": "^5.0.6",
     "clsx": "^1.1.1",
     "docusaurus-plugin-fathom": "^1.1.0",
     "hast-util-is-element": "1.1.0",
