--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
-    "build": "yarn crowdin:sync && docusaurus build",
+    "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -22,14 +22,24 @@
     "@docusaurus/preset-classic": "2.0.0-beta.6",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.6",
     "@mdx-js/react": "^1.6.21",
+    "@walletconnect/web3-provider": "^1.6.6",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "clsx": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
     "docusaurus-plugin-fathom": "^1.1.0",
+    "fs": "^0.0.1-security",
     "hast-util-is-element": "1.1.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-youtube": "^7.13.1",
     "rehype-katex": "4",
-    "remark-math": "3"
+    "remark-math": "3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0"
   },
   "browserslist": {
     "production": [
@@ -49,6 +59,7 @@
     "@types/react": "^17.0.11",
     "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7",
+    "base64-inline-loader": "^2.0.1",
     "typescript": "^4.3.4"
   }
 }
