--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download"
   },
   "dependencies": {
+    "@celo/contractkit": "^1.3.1",
     "@crowdin/cli": "^3.7.0",
     "@docusaurus/core": "2.0.0-beta.6",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.6",
@@ -39,7 +40,8 @@
     "rehype-katex": "4",
     "remark-math": "3",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "web3": "^1.6.0"
   },
   "browserslist": {
     "production": [
@@ -59,7 +61,6 @@
     "@types/react": "^17.0.11",
     "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7",
-    "base64-inline-loader": "^2.0.1",
     "typescript": "^4.3.4"
   }
 }
