--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/core": "^2.0.0-beta.9",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.9",
     "@docusaurus/preset-classic": "^2.0.0-beta.9",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.9",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.9",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.9",
     "@mdx-js/react": "^1.6.21",
