--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download"
   },
   "dependencies": {
+    "@celo/contractkit": "^2.0.0-beta.2",
+    "@celo/utils": "^2.0.0-beta.2",
     "@crowdin/cli": "^3.7.0",
     "@docusaurus/core": "^2.0.0-beta.18",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.18",
