--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "clsx": "^1.1.1",
     "docusaurus-plugin-fathom": "^1.1.0",
     "hast-util-is-element": "1.1.0",
+    "mdx-mermaid": "^1.2.3",
+    "mermaid": "^9.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-youtube": "^7.13.1",
