--- a/package.json
+++ b/package.json
@@ -17,23 +17,36 @@
   },
   "dependencies": {
     "@crowdin/cli": "^3.7.0",
+    "@celo/contractkit": "^1.3.1",
     "@docusaurus/core": "^2.0.0-beta.18",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.18",
     "@docusaurus/preset-classic": "^2.0.0-beta.18",
+    "@docusaurus/theme-live-codeblock": "2.0.0-beta.6",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.18",
     "@docusaurus/theme-live-codeblock": "^2.0.0-beta.18",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.18",
     "@mdx-js/react": "^1.6.21",
+    "@walletconnect/web3-provider": "^1.6.6",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "clsx": "^1.1.1",
+    "crypto-browserify": "^3.12.0",
     "docusaurus-plugin-fathom": "^1.1.0",
+    "fs": "^0.0.1-security",
     "hast-util-is-element": "1.1.0",
+    "https-browserify": "^1.0.0",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
     "mdx-mermaid": "^1.2.3",
     "mermaid": "^9.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-youtube": "^7.13.1",
     "rehype-katex": "4",
-    "remark-math": "3"
+    "remark-math": "3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "web3": "^1.6.0"
   },
   "browserslist": {
     "production": [
