--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download"
   },
   "dependencies": {
-    "@crowdin/cli": "^3.7.0",
     "@celo/contractkit": "^1.3.1",
-    "@docusaurus/core": "^2.0.0-beta.18",
-    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.18",
-    "@docusaurus/preset-classic": "^2.0.0-beta.18",
-    "@docusaurus/theme-live-codeblock": "2.0.0-beta.6",
-    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.18",
-    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.18",
-    "@docusaurus/theme-search-algolia": "^2.0.0-beta.18",
+    "@crowdin/cli": "^3.7.0",
+    "@docusaurus/core": "^2.0.0-beta.21",
+    "@docusaurus/plugin-client-redirects": "^2.0.0-beta.21",
+    "@docusaurus/preset-classic": "^2.0.0-beta.21",
+    "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.21",
+    "@docusaurus/theme-live-codeblock": "^2.0.0-beta.21",
+    "@docusaurus/theme-search-algolia": "^2.0.0-beta.21",
     "@mdx-js/react": "^1.6.21",
     "@walletconnect/web3-provider": "^1.6.6",
     "assert": "^2.0.0",
@@ -35,10 +34,10 @@
     "fs": "^0.0.1-security",
     "hast-util-is-element": "1.1.0",
     "https-browserify": "^1.0.0",
-    "net": "^1.0.2",
-    "os-browserify": "^0.3.0",
     "mdx-mermaid": "^1.2.3",
     "mermaid": "^9.1.1",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-youtube": "^7.13.1",
@@ -46,6 +45,7 @@
     "remark-math": "3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "url": "^0.11.0",
     "web3": "^1.6.0"
   },
   "browserslist": {
@@ -61,7 +61,7 @@
     ]
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.18",
+    "@docusaurus/module-type-aliases": "^2.0.0-beta.21",
     "@tsconfig/docusaurus": "^1.0.2",
     "@types/react": "^17.0.11",
     "@types/react-helmet": "^6.1.1",
