--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@crowdin/cli": "^3.7.0",
     "@docusaurus/core": "^2.0.0-beta.21",
     "@docusaurus/plugin-client-redirects": "^2.0.0-beta.21",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-beta.21",
     "@docusaurus/preset-classic": "^2.0.0-beta.21",
     "@docusaurus/remark-plugin-npm2yarn": "^2.0.0-beta.21",
     "@docusaurus/theme-live-codeblock": "^2.0.0-beta.21",
     "@docusaurus/theme-search-algolia": "^2.0.0-beta.21",
     "@mdx-js/react": "^1.6.21",
+    "@popperjs/core": "^2.11.5",
     "@walletconnect/web3-provider": "^1.6.6",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
@@ -40,6 +42,7 @@
     "os-browserify": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^2.3.0",
     "react-youtube": "^7.13.1",
     "rehype-katex": "4",
     "remark-math": "3",
