--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^1.1.1",
     "crypto-browserify": "^3.12.0",
     "docusaurus-plugin-fathom": "^1.1.0",
+    "docusaurus-plugin-hubspot": "^1.0.1",
     "fs": "^0.0.1-security",
     "hast-util-is-element": "1.1.0",
     "https-browserify": "^1.0.0",
