--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
-project_id: ""
-api_token: ""
+api_token_env: "CROWDIN_PERSONAL_TOKEN"
+api_token_env: "ENT_CROWDIN_PERSONAL_TOKEN"
 preserve_hierarchy: true
 base_url: "https://celo.crowdin.com"
 files: [
