--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@docusaurus/theme-search-algolia": "^2.1.0",
     "@mdx-js/react": "^1.6.21",
     "@popperjs/core": "^2.11.5",
+    "@saucelabs/theme-github-codeblock": "^0.1.1",
     "@walletconnect/web3-provider": "^1.6.6",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
