--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@popperjs/core": "^2.11.5",
     "@saucelabs/theme-github-codeblock": "^0.1.1",
     "@walletconnect/web3-provider": "^1.6.6",
-    "react-lite-youtube-embed": "^2.2.2",
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "clsx": "^1.1.1",
@@ -45,6 +44,8 @@
     "os-browserify": "^0.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.6.0",
+    "react-lite-youtube-embed": "^2.2.2",
     "react-popper": "^2.3.0",
     "react-youtube": "^7.13.1",
     "rehype-katex": "4",
