[Aviraj] Added blog how-to-create-an-nft-with-royalties-on-celo.md

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -3,3 +3,8 @@ josh:
   title: Developer Relations, cLabs
   url: https://github.com/critesjosh
   image_url: https://github.com/critesjosh.png
+avirajkhare00:
+  name: Aviraj Khare
+  title: Web3 Developer
+  url: https://github.com/avirajkhare00
+  image_url: https://github.com/avirajkhare00.png
